--- a/vars/default.cfg
+++ b/vars/default.cfg
@@ -1,2 +1,3 @@
 filepath="/home/foo/reports/Inbound_Call_Log"   //seperate extension from fullpath for easy to customize file name
 ext="csv"
+reportpath="/home/foo/reports"
